# words

./: .gitignore  docker-compose.yml  nginx.conf  playground.ipynb
backend/: Dockerfile  main.py  pyproject.toml
frontend/: app.jsx  index.html
